# coo_optimization

./: README.md  index.html
coo_optimization/: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
coo_optimization/coo_optimization/: __init__.py  coo.py
coo_optimization/coo_optimization.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
coo_optimization/docs/: conf.py  index.rst
coo_optimization/examples/: demo_coo_optimization.py
coo_optimization/tests/: __init__.py  test_coo.py
