[metadata]
name = coo_optimization
version = attr: coo_optimization.__version__
author = Sandip Garai
author_email = sandipnicksandy@gmail.com
description = Canine Olfactory Optimizer - A bio-inspired metaheuristic algorithm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://SandipGarai.github.io/coo-optimization
project_urls =
    Bug Tracker = https://github.com/SandipGarai/coo_optimization/issues
    Documentation = https://github.com/SandipGarai/coo_optimization/blob/main/README.md
    Source Code = https://github.com/SandipGarai/coo_optimization/tree/main/coo_optimization
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Mathematics
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy>=1.19.0
    scikit-learn>=0.24.0
    joblib>=1.0.0

[options.packages.find]
exclude =
    tests*
    examples*

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov>=2.0
    black>=21.0
    flake8>=3.9
    sphinx>=4.0

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts =
    -v
    --strict-markers
    --cov=coo_optimization
    --cov-report=term-missing
    --cov-report=html

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist
ignore = E203,W503